--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Firebase関連
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+ios/firebase_app_id_file.json
+macos/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
