パッケージ関連

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,20 +16,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_lints: ^2.0.0
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.4.10
+  state_notifier: ^1.0.0
+  freezed_annotation: ^2.4.1
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.5
+  mockito:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
-  flutter_hooks:
-  hooks_riverpod:
-  state_notifier:
-  freezed_annotation:
-  firebase_core:
-  firebase_auth:
-  cloud_firestore:
-  mockito:
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
